Add registration on server
